--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-This is my personal website.
-
-I wonder what happens if I add more lines here.
-
-Etc. etc. etc.
+<!DOCTYPE html>
+<html>
+<head><title>Personal Website Title</title></head>
+<body>
+    <h1>This is my personal website.</h1>
+    <p>I wonder what happens if I add more lines here.</p>
+    <p>Etc. etc. etc.</p>
+</body>
+</html>
