--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>Personal Website Title</title></head>
+<head>
+    <title>Personal Website Title</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <h1>This is my personal website.</h1>
     <p>I wonder what happens if I add more lines here.</p>
