--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Personal Website Title</title>
     <link rel="stylesheet" href="style.css">
+    <title>Bored?</title>
 </head>
 <body>
-    <h1>This is my personal website.</h1>
-    <p>I wonder what happens if I add more lines here.</p>
-    <p>Etc. etc. etc.</p>
+    <h1>If you're bored, you've come to the right place...</h1>
+    <p>Behold! A list of things to become un-bored.</p>
 </body>
 </html>
