--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>If you're bored, you've come to the right place...</h1>
-    <p>Behold! A list of things to become un-bored.</p>
+    <p class="desc"><b>Behold!</b> A list of things to become un-bored.</p>
 </body>
 </html>
