--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>If you're bored, you've come to the right place...</h1>
-    <p class="desc"><strong>Behold!</strong> A list of things to become un-bored.</p>
+    <p class="desc"><strong><em>Behold!</em></strong> A list of things to become un-bored.</p>
 </body>
 </html>
