--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html>
+
+<!-- Header -->
 <head>
     <title>Bored?</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<!-- Sub-Header -->
 <body>
     <h1>If you're bored, you've come to the right place...</h1>
     <p class="desc"><strong><em>Behold!</em></strong> A list of things to become un-bored.</p>
+
+<!-- Tabs -->
+<div class="tab">
+    <button class="tablinks">Buttons!</button>
+    <button class="tablinks">Pics!</button>
+    <!-- <button class="tablinks">Ideas!</button>
+    <button class="tablinks">Message!</button> -->
+</div>
+
+<div id="Buttons!" class="buttontab">
+    <h2>Some buttons to press!</h2>
+    <p>some random text</p>
+</div>
+
+<div id="Pics!" class="picstab">
+    <h2>Random (open-source) pictures!</h2>
+    <p>some random text!</p>
+</div>
+
 </body>
 </html>
