--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <!-- Tabs -->
 <div class="tab">
-    <button class="tablinks">Buttons!</button>
-    <button class="tablinks">Pics!</button>
-    <!-- <button class="tablinks">Ideas!</button>
-    <button class="tablinks">Message!</button> -->
+    <button class="tablinks tabclick" onclick="openTab(event, 'Buttons!')">Buttons!</button>
+    <button class="tablinks tabclick" onclick="openTab(event, 'Pics!')">Pics!</button>
+    <!-- <button class="tablinks tabclick">Ideas!</button>
+    <button class="tablink tabclick">Message!</button> -->
 </div>
 
 <div id="Buttons!" class="buttontab">
@@ -29,6 +29,22 @@
     <h2>Random (open-source) pictures!</h2>
     <p>some random text!</p>
 </div>
+
+<script>
+    function openTab(evt, tabName) {
+        var i, tabclick, tablinks;
+        tabclick = document.getElementsByClassName("tabclick");
+        for (i = 0; i < tabclick.length; i++) {
+            tabclick[i].style.display = "none";
+        }
+        tablinks = document.getElementsByClassName("tablinks");
+        for (i=0; i < tablinks.length; i++) {
+            tablinks[i].className = tablinks[i].className.replace(" active", "");
+        }
+        document.getElementById(tabName).style.display = "block";
+        evt.currentTarget.className += " active";
+    }
+</script>
 
 </body>
 </html>
