--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
 <!-- Tabs -->
 <div class="tab">
-    <button class="tablinks tabclick" onclick="openTab(event, 'Buttons!')">Buttons!</button>
-    <button class="tablinks tabclick" onclick="openTab(event, 'Pics!')">Pics!</button>
+    <button class="tablinks" onclick="openTab(event, 'Buttons!')">Buttons!</button>
+    <button class="tablinks" onclick="openTab(event, 'Pics!')">Pics!</button>
     <!-- <button class="tablinks tabclick">Ideas!</button>
     <button class="tablink tabclick">Message!</button> -->
 </div>
 
-<div id="Buttons!" class="buttontab">
+<div id="Buttons!" class="buttontab tabclick">
     <h2>Some buttons to press!</h2>
     <p>some random text</p>
 </div>
 
-<div id="Pics!" class="picstab">
+<div id="Pics!" class="picstab tabclick">
     <h2>Random (open-source) pictures!</h2>
     <p>some random text!</p>
 </div>
@@ -33,10 +33,10 @@
 <script>
     function openTab(evt, tabName) {
         var i, tabclick, tablinks;
-        // tabclick = document.getElementsByClassName("tabclick");
-        // for (i = 0; i < tabclick.length; i++) {
-        //     tabclick[i].style.display = "none";
-        // }
+        tabclick = document.getElementsByClassName("tabclick");
+        for (i = 0; i < tabclick.length; i++) {
+            tabclick[i].style.display = "none";
+        }
         tablinks = document.getElementsByClassName("tablinks");
         for (i=0; i < tablinks.length; i++) {
             tablinks[i].className = tablinks[i].className.replace(" active", "");
