--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
 <!-- Tabs -->
 <div class="tab">
-    <button class="buttontab tablinks" onclick="openTab(event, 'Buttons!')">Buttons!</button>
-    <button class="picstab tablinks" onclick="openTab(event, 'Pics!')">Pics!</button>
+    <button class="startbut tablinks" onclick="openTab(event, 'Buttons!')">Buttons!</button>
+    <button class="tablinks" onclick="openTab(event, 'Pics!')">Pics!</button>
     <!-- <button class="tablinks tabclick">Ideas!</button>
     <button class="tablink tabclick">Message!</button> -->
 </div>
 
-<div id="Buttons!" class="tabclick">
+<div id="Buttons!" class="buttontab tabclick">
     <h2>Some buttons to press!</h2>
     <p>some random text</p>
 </div>
 
-<div id="Pics!" class="tabclick">
+<div id="Pics!" class="picstab tabclick">
     <h2>Random (open-source) pictures!</h2>
     <p>some random text!</p>
 </div>
