--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Tabs -->
 <div class="tab">
     <button class="startbut tablinks" onclick="openTab(event, 'Buttons!')">Buttons!</button>
-    <button class="tablinks" onclick="openTab(event, 'Pics!')">Pics!</button>
+    <button class="startoth tablinks" onclick="openTab(event, 'Pics!')">Pics!</button>
     <!-- <button class="tablinks tabclick">Ideas!</button>
     <button class="tablink tabclick">Message!</button> -->
 </div>
