--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <div class="tab">
     <button class="tablinks" onclick="openTab(event, 'Buttons!')">Buttons!</button>
     <button class="tablinks" onclick="openTab(event, 'Pics!')">Pics!</button>
-    <!-- <button class="tablinks tabclick">Ideas!</button>
-    <button class="tablink tabclick">Message!</button> -->
+    <button class="tablinks" onclick="openTab(event, 'Ideas!')">Ideas!</button>
+    <button class="tablinks" onclick="openTab(event, 'Message!')">Message!</button>
 </div>
 
 <div id="Buttons!" class="buttontab tabclick">
@@ -26,6 +26,16 @@
 </div>
 
 <div id="Pics!" class="picstab tabclick">
+    <h2>Random (open-source) pictures!</h2>
+    <p>some random text!</p>
+</div>
+
+<div id="Ideas!" class="ideastab tabclick">
+    <h2>Random (open-source) pictures!</h2>
+    <p>some random text!</p>
+</div>
+
+<div id="Message!" class="messagetab tabclick">
     <h2>Random (open-source) pictures!</h2>
     <p>some random text!</p>
 </div>
