--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 </div>
 
 <div id="Ideas!" class="ideastab tabclick">
-    <h2>Random (open-source) pictures!</h2>
+    <h2>Ideas you may want to consider</h2>
     <p>some random text!</p>
 </div>
 
 <div id="Message!" class="messagetab tabclick">
-    <h2>Random (open-source) pictures!</h2>
-    <p>some random text!</p>
+    <h2>Stop procrastinating</h2>
+    <p>(hey, you did ask for a message, and this is your sign)</p>
 </div>
 
 <script>
