update before needing to go

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Sub-Header -->
 <body>
     <h1>If you're bored, you've come to the right place...</h1>
-    <p class="desc"><strong><em>Behold!</em></strong> A list of things to become un-bored.</p>
+    <p class="desc"><strong><em>Behold!</em></strong> Random things to become un-bored.</p>
 
 <!-- Tabs -->
 <div class="tab">
