--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div id="Message!" class="messagetab tabclick">
     <h2>Stop procrastinating</h2>
-    <p>(hey, you did ask for a message, and this is your sign)</p>
+    <p>(This is your sign)</p>
 </div>
 
 <script>
