list + removing background color

--- a/index.html
+++ b/index.html
@@ -32,7 +32,38 @@
 
 <div id="Ideas!" class="ideastab tabclick">
     <h2>Ideas you may want to consider</h2>
-    <p>some random text!</p>
+    <p>Draw...</p>
+    <ul>
+        <li>A horse</li>
+        <li>Two horses</li>
+        <li>Three horses</li>
+        <li>A coffee cup</li>
+        <li>A cat</li>
+        <li>A dog</li>
+        <li>A person performing a handstand</li>
+        <li>A horse performing a hoof(?)stand</li>
+        <li>Opera</li>
+        <li>The circus</li>
+        <li>Four horses</li>
+    </ul>
+    <p>Write about...</p>
+    <ul>
+        <li>Two kittens who just can't seem to get along</li>
+        <li>A donkey who says "No" to everything asked of it</li>
+        <li>Ghosts</li>
+        <li>A dog who is obsessed with carrots</li>
+        <li>How to specifically perform a jumping jack</li>
+        <li>Trees. Yep, just trees</li>
+        <li>Five horses</li>
+    </ul>
+    <p>Exercise ideas</p>
+    <ul>
+        <li>Take a walk around the neighborhood</li>
+        <li>Do twenty jumping jacks using the method you outlined previously</li>
+        <li>Scream into the void for five minutes</li>
+        <li>Take a run around the neighborhood</li>
+        <li>Six- wait, no, that's probably dangerous</li>
+    </ul>
 </div>
 
 <div id="Message!" class="messagetab tabclick">
