--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="Pics!" class="picstab tabclick">
     <h2>Random (open-source) pictures!</h2>
     <p>some random text!</p>
-    <img src="https://plus.unsplash.com/premium_photo-1667761634654-7fcf176434b8?q=80&w=2937&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="p">
+    <img src="https://plus.unsplash.com/premium_photo-1667761634654-7fcf176434b8?q=80&w=2937&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="randomly generated image">
 </div>
 
 <div id="Ideas!" class="ideastab tabclick">
