--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
 <div id="Pics!" class="picstab tabclick">
     <h2>Random (open-source) pictures!</h2>
-    <p>some random text!</p>
     <img src="https://plus.unsplash.com/premium_photo-1667761634654-7fcf176434b8?q=80&w=2937&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="randomly generated image">
 </div>
 
@@ -35,7 +34,7 @@
     <h2>Ideas you may want to consider</h2>
     <p>Draw...</p>
     <ul>
-        <li>A horse</li>
+        <li><p>A horse</p></li>
         <li>Two horses</li>
         <li>Three horses</li>
         <li>A coffee cup</li>
