deleting p from list item

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h2>Ideas you may want to consider</h2>
     <p>Draw...</p>
     <ul>
-        <li><p>A horse</p></li>
+        <li>A horse</li>
         <li>Two horses</li>
         <li>Three horses</li>
         <li>A coffee cup</li>
