--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li>The circus</li>
         <li>Four horses</li>
     </ul>
-    <p>Write about...</p>
+    <p>\n Write about...</p>
     <ul>
         <li>Two kittens who just can't seem to get along</li>
         <li>A donkey who says "No" to everything asked of it</li>
@@ -56,7 +56,7 @@
         <li>Trees. Yep, just trees</li>
         <li>Five horses</li>
     </ul>
-    <p>Exercise ideas</p>
+    <p>\n Exercise ideas</p>
     <ul>
         <li>Take a walk around the neighborhood</li>
         <li>Do twenty jumping jacks using the method you outlined previously</li>
