--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div id="Ideas!" class="ideastab tabclick">
     <h2>Ideas you may want to consider</h2>
-    <p>Draw...</p>
+    <p><b>Draw...</b></p>
     <ul>
         <li>A horse</li>
         <li>Two horses</li>
@@ -46,7 +46,7 @@
         <li>The circus</li>
         <li>Four horses</li>
     </ul>
-    <p><br>Write about...</p>
+    <p><br><b>Write about...</b></p>
     <ul>
         <li>Two kittens who just can't seem to get along</li>
         <li>A donkey who says "No" to everything asked of it</li>
@@ -56,7 +56,7 @@
         <li>Trees. Yep, just trees</li>
         <li>Five horses</li>
     </ul>
-    <p><br>Exercise ideas</p>
+    <p><br><b>Exercise ideas</b></p>
     <ul>
         <li>Take a walk around the neighborhood</li>
         <li>Do twenty jumping jacks using the method you outlined previously</li>
