--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <title>Bored?</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href=&#128516;>
 </head>
 
 <!-- Sub-Header -->
