--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <title>Bored?</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href=&#128516;>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😀</text></svg>">
 </head>
 
 <!-- Sub-Header -->
@@ -27,7 +27,7 @@
 </div>
 
 <div id="Pics!" class="picstab tabclick">
-    <h2>Random (open-source) pictures!</h2>
+    <h2>Random (open-source) pics!</h2>
     <img src="https://plus.unsplash.com/premium_photo-1667761634654-7fcf176434b8?q=80&w=2937&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="randomly generated image">
 </div>
 
@@ -57,12 +57,12 @@
         <li>Trees. Yep, just trees</li>
         <li>Five horses</li>
     </ul>
-    <p><br><b>Exercise ideas</b></p>
+    <p><br><b>Exercise by/with...</b></p>
     <ul>
-        <li>Take a walk around the neighborhood</li>
-        <li>Do twenty jumping jacks using the method you outlined previously</li>
-        <li>Scream into the void for five minutes</li>
-        <li>Take a run around the neighborhood</li>
+        <li>Walking around the neighborhood</li>
+        <li>Doing twenty jumping jacks using the method you outlined previously</li>
+        <li>Screaming into the void for five minutes</li>
+        <li>Running around the neighborhood</li>
         <li>Six- wait, no, that's probably dangerous</li>
     </ul>
 </div>
