--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
 <div id="Buttons!" class="buttontab tabclick">
     <h2>Some buttons to press!</h2>
-    <p>some random text</p>
+    <button type="button" onclick="alert('You clicked me!')">Are you thinking about clicking me?</button>
+    <p><br></p>
+    <button type="button" onclick="alert('You clicked me! (2)')">What about me?</button>
+    <p><br></p>
+    <button type="button" onclick="alert('Oh dear -- how many buttons are you going to press?')">And me?</button>
 </div>
 
 <div id="Pics!" class="picstab tabclick">
