--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
 <div id="Buttons!" class="buttontab tabclick">
     <h2>Some buttons to press!</h2>
-    <button type="button" onclick="alert('You clicked me!')">Are you thinking about clicking me?</button>
-    <button type="button" onclick="alert('You clicked me! (2)')">What about me?</button>
-    <button type="button" onclick="alert('Oh dear -- how many buttons are you going to press?')">And me?</button>
-    <button type="button" onclick="alert('I see that the answer is at least one more')">Me??</button>
-    <button type="button" onclick="alert('Maybe two more')">Another unsuspicious button</button>
-    <button type="button" onclick="alert('Wow, you really like to click buttons')">Hmm what does this button do?</button>;
+    <button type="button" class="button" onclick="alert('You clicked me!')">Are you thinking about clicking me?</button>
+    <button type="button" class="button" onclick="alert('You clicked me! (2)')">What about me?</button>
+    <button type="button" class="button" onclick="alert('Oh dear -- how many buttons are you going to press?')">And me?</button>
+    <button type="button" class="button" onclick="alert('I see that the answer is at least one more')">Me??</button>
+    <button type="button" class="button" onclick="alert('Maybe two more')">Another unsuspicious button</button>
+    <button type="button" class="button" onclick="alert('Wow, you really like to click buttons')">Hmm what does this button do?</button>
 </div>
 
 <div id="Pics!" class="picstab tabclick">
