--- a/index.html
+++ b/index.html
@@ -24,11 +24,18 @@
 <div id="Buttons!" class="buttontab tabclick">
     <h2>Some buttons to press!</h2>
     <button type="button" class="button" onclick="alert('You clicked me!')">Are you thinking about clicking me?</button>
+    <br>
     <button type="button" class="button" onclick="alert('You clicked me! (2)')">What about me?</button>
+    <br>
     <button type="button" class="button" onclick="alert('Oh dear -- how many buttons are you going to press?')">And me?</button>
+    <br>
     <button type="button" class="button" onclick="alert('I see that the answer is at least one more')">Me??</button>
+    <br>
     <button type="button" class="button" onclick="alert('Maybe two more')">Another unsuspicious button</button>
+    <br>
     <button type="button" class="button" onclick="alert('Wow, you really like to click buttons')">Hmm what does this button do?</button>
+    <br>
+    <button type="button" class="button" onclick="alert('At this rate I will run out of buttons')">What about this one?</button>
 </div>
 
 <div id="Pics!" class="picstab tabclick">
