--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <button type="button" class="button" onclick="alert('Wow, you really like to click buttons')">Hmm what does this button do?</button>
     <br><br>
     <button type="button" class="button" onclick="alert('At this rate I will run out of buttons')">What about this one?</button>
+    <br><br>
+    <button type="button" class="button" onclick="alert('I have now run out of buttons...')">Are you going to click me too?</button>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <button type="button" class="button" onclick="alert('You found the secret button!')">Ooh, what's this?</button>
 </div>
 
 <div id="Pics!" class="picstab tabclick">
