--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 <div id="Pics!" class="picstab tabclick">
     <h2>Random (open-source) pics!</h2>
-    <input onclick="displayImage();" type="button" value="Display Random Image">
-    <img src=https://plus.unsplash.com/premium_photo-1667761634654-7fcf176434b8?q=80&w=2937&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D name="canvas" />
+    <input onclick="displayImage();" type="button" class="button" value="Display Random Image">
+    <img src="https://plus.unsplash.com/premium_photo-1667761634654-7fcf176434b8?q=80&w=2937&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" name="canvas" />
 </div>
 
 <div id="Ideas!" class="ideastab tabclick">
